Update gdsutil to work with a Store (#1124)
* Update gdsutil to work with a Store
* add database usage
